Fixed playlist#destroy, changed notice and alert position/z-index.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,8 @@ header {
     border-width: 0 1px 1px 1px;
     border-style: solid;
     border-color: #888;
-
+    z-index: 2;
+    position: relative;
     
 }
 
@@ -106,10 +107,14 @@ p#notice {
     background: #ccffc8;
     padding: 8px;
     margin: 0;
+    position: relative;
+    z-index: 1;
 }
 
 p#alert {
     background: #ffccaa;
     padding: 8px;
     margin: 0;
+    position: relative;
+    z-index: 1;
 }
